<resources>
    <string name="app_name">yef</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">About Us</string>
    <string name="menu_gallery">About Our Founder</string>
    <string name="menu_slideshow">Internship Opportunity</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_locate_us">Locate us</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="name_of_org">YEF</string>
</resources>