<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_our_founder"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/Donation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_donation" />
        <item
            android:id="@+id/nav_locate_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_locate_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contact_us" />

    </group>
</menu>